# ha-tracearr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  validate.yml
custom_components/tracearr/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  manifest.json  sensor.py  strings.json
tests/: __init__.py  conftest.py  test_api.py  test_diagnostics.py  test_event.py  test_sensor.py
